adjusting layout and routing

--- a/index.html
+++ b/index.html
@@ -1,128 +1,143 @@
 <!DOCTYPE html>
 <html>
-  <head>
-		<meta charset="utf-8"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles.css" type="text/css" rel="stylesheet">
-    <link rel="shortcut icon" href="pictures/C_Hacks.jpg">
-    <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
-    <script
-      src="https://code.jquery.com/jquery-3.1.1.min.js"
-      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-      crossorigin="anonymous"></script>
-    <script src="semantic/dist/semantic.min.js"></script>
-    <title>Henry Doan</title>
-  </head>
-  <body style="-webkit-font-smoothing: antialiased !important;">
 
-    <!--HEADER MENU-->
-    <div class="ui fixed inverted menu" style="background-color:#2D2D2D; color:white";> 
-      <div class="active item">
-	Henry Doan
-      </div>
-      <a class="item" href="https://hdoan002.github.io/">
-	Home
-      </a>
-      <a class="item" href="https://hdoan002.github.io/projects.html">
-	My Projects
-      </a>
-      <a class="item" href="#schedule">
-	My Schedule
-      </a>
-      <a class="item" href="#contact">
-	Contact
-      </a>
-    </div>
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<link href="styles.css" type="text/css" rel="stylesheet">
+	<link rel="shortcut icon" href="pictures/C_Hacks.jpg">
+	<link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+	 crossorigin="anonymous"></script>
+	<script src="semantic/dist/semantic.min.js"></script>
+	<title>Henry Doan</title>
+</head>
 
-    <div class="ui grid">
-      <div class="column row" style="background-color:#92C14D; color:#FFFFFF;">
-	<!--ABOUT ME-->
-	<div style="padding-right:30px; padding-left:30px; padding-top:10px;">
-	  <h2>About me:</h2>
-	  <!--PORTRAIT-->
-	  <img class="ui medium left floated image" src="pictures/portrait.jpg">
-	  <p style="font-size:18px; line-height:150%; text-align:justify;">I am studying to be a computer scientist at the University of California, Riverside and am heavily involved in our ACM charter. ACM stands for the Association for Computing Machinery which is a professional student organization geared towards supporting our Computer Science and Engineering students. I am the ACM Professional Development Chair, who is responsible for interacting and fostering professional relationships with companies. It is my responsibility to contact companies and collaborate with them to develop more opportunities for our engineering community at UCR. I enjoy this position because it allows me to contribute UCR's professional presence. I believe that the true meaning of success is not the gaining of material possessions but rather, it is the ability to encourage and add to the success of those you care about. I appreciate the opportunity to  support and serve my fellow students and members because of my passion for Computer Science. My only goal is to be able to say that I have made a difference within my community during my time as the Professional Development Chair.</p>
-	  <a class="ui white button" href="https://hdoan002.github.io/resume/Henry_Doan_Resume.pdf" tabindex="0" name="resume">My Resume</a>
-	</div>
-      </div>
+<body style="-webkit-font-smoothing: antialiased !important;">
 
-      <div class="centered column row" style="background-color:grey; color:#FFFFFF;">
-	<!--PROJECTS-->
-	<h2>Projects</h2>
-	<div class="picture_div">
-	  <figure>
-	    <img src="pictures/C_Hacks.jpg" alt="Citrus Hacks" class="pic">
-	    <figcaption>Citrus Hack 2015</figcaption>
-	  </figure>
+	<!--HEADER MENU-->
+	<div class="ui fixed inverted menu" style="background-color:#2D2D2D; color:white" ;>
+		<div class="active item">
+			Henry Doan
+		</div>
+		<a class="item" href="https://hdoan002.github.io/">
+			Home
+		</a>
+		<a class="item" href="https://hdoan002.github.io/projects.html">
+			My Projects
+		</a>
+		<a class="item" href="#schedule">
+			My Schedule
+		</a>
+		<a class="item" href="#contact">
+			Contact
+		</a>
 	</div>
-	<div class="picture_div">
-	  <figure>
-	    <img src="pictures/SB_Hacks_2016.jpg" alt="SB Hacks" class="pic">
-	    <figcaption>SB Hack 2016</figcaption>
-	  </figure>
-	</div>
-	<div class="picture_div">
-	  <figure>
-	    <img src="pictures/RSA_2016.jpg" alt="RSA" class="pic">
-	    <figcaption>RSA</figcaption>
-	  </figure>
-	</div>
-	<div class="picture_div">
-	  <figure>
-	    <img src="pictures/bash_scripts.jpg" alt="Bash Scripts" class="pic">
-	    <figcaption>Bash Script Collection</figcaption>
-	  </figure>
-	</div>
-      </div>
 
-      <div class="ui centered column row" style="padding-bottom:40px;">
-	<a id="schedule" style="height:40px; margin-top:-40px; visibility:hidden;"></a>
-	<!--SCHEDULE-->
-	  <h2 style="padding-top:15px; padding-bottom:10px; margin-top:14px;">My Schedule</h2>
-	  <iframe src="https://calendar.google.com/calendar/embed?title=My%20Calendar&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23cccccc&amp;src=hdoan002%40ucr.edu&amp;color=%232952A3&amp;ctz=America%2FLos_Angeles" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-      </div>
-    </div>
+	<div class="ui grid">
+		<div class="column row" style="background-color:#92C14D; color:#FFFFFF;">
+			<!--ABOUT ME-->
+			<div style="padding-right:30px; padding-left:30px; padding-top:10px;">
+				<h2>About me:</h2>
+				<!--PORTRAIT-->
+				<img class="ui medium left floated image" src="pictures/portrait.jpg">
+				<p style="font-size:18px; line-height:150%; text-align:justify;">I am studying to be a computer scientist at the University of California, Riverside and am heavily involved in our ACM
+					charter. ACM stands for the Association for Computing Machinery which is a professional student organization geared
+					towards supporting our Computer Science and Engineering students. I am the ACM Professional Development Chair, who is
+					responsible for interacting and fostering professional relationships with companies. It is my responsibility to contact
+					companies and collaborate with them to develop more opportunities for our engineering community at UCR. I enjoy this
+					position because it allows me to contribute UCR's professional presence. I believe that the true meaning of success
+					is not the gaining of material possessions but rather, it is the ability to encourage and add to the success of those
+					you care about. I appreciate the opportunity to support and serve my fellow students and members because of my passion
+					for Computer Science. My only goal is to be able to say that I have made a difference within my community during my
+					time as the Professional Development Chair.</p>
+				<a class="ui white button" href="https://hdoan002.github.io/resume/Henry_Doan_Resume.pdf" tabindex="0" name="resume">My Resume</a>
+			</div>
+		</div>
 
-    <!--FOOTER-->
-    <div class="ui vertical footer segment" style="background-color:#92C14D; color:#FFFFFF; padding-bottom:100px;">
-      <div class="ui center align container">
-	<a id="contact" style="height:40px; margin:-40px; visibility: hidden;"></a>
-	<!--CONTACT ME-->
-	<div class="sixteen wide column" style="padding-bottom:30px;">
-	  <h2 style="text-align:center">Contact me:</h2>
+		<div class="centered column row" style="background-color:grey; color:#FFFFFF;">
+			<!--PROJECTS-->
+			<h2>Projects</h2>
+		</div>
+
+		<div class="eight wide centered column row" style="background-color:grey; color:#FFFFFF;">
+			<img src="pictures/C_Hacks.jpg" alt="Citrus Hacks" class="centered_img">
+			<a class="ui green button" href="https://hdoan002.github.io/projects.html/#mailbox" tabindex="0">Mailbox Notifier</a>
+		</div>
+
+		<div class="eight wide centered column row" style="background-color:grey; color:#FFFFFF;">
+			<img src="pictures/SB_Hacks_2016.jpg" alt="SB Hacks" class="centered_img">
+			<a class="ui green button" href="https://hdoan002.github.io/projects.html/#insights" tabindex="0">Class Insights</a>
+		</div>
+
+		<div class="eight wide centered column row" style="background-color:grey; color:#FFFFFF;">
+			<img src="pictures/RSA_2016.jpg" alt="RSA" class="centered_img">
+			<a class="ui green button" href="https://hdoan002.github.io/projects.html/#rsa" tabindex="0">RSA Encryption</a>
+		</div>
+
+		<div class="eight wide centered column row" style="background-color:grey; color:#FFFFFF;">
+			<img src="pictures/bash_scripts.jpg" alt="Bash Scripts" class="centered_img">
+			<a class="ui green button" href="https://hdoan002.github.io/projects.html/#bash" tabindex="0">Bash Script Collection</a>
+		</div>
+
+
+
+		<div class="ui centered column row" style="padding-bottom:40px;">
+			<a id="schedule" style="height:40px; margin-top:-40px; visibility:hidden;"></a>
+			<!--SCHEDULE-->
+			<h2 style="padding-top:15px; padding-bottom:10px; margin-top:14px;">My Schedule</h2>
+			<iframe src="https://calendar.google.com/calendar/embed?title=My%20Calendar&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23cccccc&amp;src=hdoan002%40ucr.edu&amp;color=%232952A3&amp;ctz=America%2FLos_Angeles"
+			 style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+		</div>
 	</div>
-	<div class="ui stackable inverted divided grid">
-	  <div class="ui center aligned four wide column" style="padding:20px; font-size:12pt;">
-	    <b>Email: </b> hdoan657@gmail.com
-	    <br>
-	    <b>Phone Number: </b> (669)237-9628
-	  </div>
-	  <div class="ui center aligned three wide column">
-	    <h4 class="ui inverted header">Github</h4>
-	    <a class="ui circular github icon button" href="https://github.com/hdoan002">
-	      <i class="github icon"></i>
-	    </a>
-	  </div>
-	  <div class="ui center aligned three wide column">
-	    <h4 class="ui inverted header">LinkedIn</h4>
-	    <a class="ui circular linkedin icon button" href="https://www.linkedin.com/in/henry-doan-6b523165/">
-	      <i class="linkedin icon"></i>
-	    </a>
-	  </div>
-	  <div class="ui center aligned three wide column">
-	    <h4 class="ui inverted header">Facebook</h4>
-	    <a class="ui circular facebook icon button" href="https://www.facebook.com/henry.doan.12">
-	      <i class="facebook icon"></i>
-	    </a>
-	  </div>
-	  <div class="ui center aligned three wide column">
-	    <h4 class="ui inverted header">Instagram</h4>
-	    <a class="ui circular instagram icon button" href="https://www.instagram.com/harrychoow/">
-	      <i class="instagram icon"></i>
-	    </a>
-	  </div>
+
+
+
+
+
+
+	<!--FOOTER-->
+	<div class="ui vertical footer segment" style="background-color:#92C14D; color:#FFFFFF; padding-bottom:100px;">
+		<div class="ui center align container">
+			<a id="contact" style="height:40px; margin:-40px; visibility: hidden;"></a>
+			<!--CONTACT ME-->
+			<div class="sixteen wide column" style="padding-bottom:30px;">
+				<h2 style="text-align:center">Contact me:</h2>
+			</div>
+			<div class="ui stackable inverted divided grid">
+				<div class="ui center aligned four wide column" style="padding:20px; font-size:12pt;">
+					<b>Email: </b> hdoan657@gmail.com
+					<br>
+					<b>Phone Number: </b> (669)237-9628
+				</div>
+				<div class="ui center aligned three wide column">
+					<h4 class="ui inverted header">Github</h4>
+					<a class="ui circular github icon button" href="https://github.com/hdoan002">
+						<i class="github icon"></i>
+					</a>
+				</div>
+				<div class="ui center aligned three wide column">
+					<h4 class="ui inverted header">LinkedIn</h4>
+					<a class="ui circular linkedin icon button" href="https://www.linkedin.com/in/henry-doan-6b523165/">
+						<i class="linkedin icon"></i>
+					</a>
+				</div>
+				<div class="ui center aligned three wide column">
+					<h4 class="ui inverted header">Facebook</h4>
+					<a class="ui circular facebook icon button" href="https://www.facebook.com/henry.doan.12">
+						<i class="facebook icon"></i>
+					</a>
+				</div>
+				<div class="ui center aligned three wide column">
+					<h4 class="ui inverted header">Instagram</h4>
+					<a class="ui circular instagram icon button" href="https://www.instagram.com/harrychoow/">
+						<i class="instagram icon"></i>
+					</a>
+				</div>
+			</div>
+		</div>
 	</div>
-      </div>
-    </div>
-  </body>
+</body>
+
 </html>
