--- a/projects.html
+++ b/projects.html
@@ -1,194 +1,195 @@
 <!DOCTYPE html>
 <html>
-  <head>
-		<meta charset="utf-8"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="pictures/C_Hacks.jpg">
-    <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
-    <script
-      src="https://code.jquery.com/jquery-3.1.1.min.js"
-      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-      crossorigin="anonymous"></script>
-    <script src="semantic/dist/semantic.min.js"></script>
-    <title>Henry Doan</title>
-  </head>
-  
-  <body style="-webkit-font-smoothing: antialiased !important;">
 
-    <!--HEADER MENU-->
-    <div class="ui fixed inverted menu" style="background-color:#2D2D2D; color:white;"> 
-      <div class="active item">
-	Henry Doan
-      </div>
-      <a class="item" href="https://hdoan002.github.io/">
-	Home
-      </a>
-      <a class="item" href="#">
-	My Projects
-      </a>
-      <a class="item" href="https://hdoan002.github.io/#schedule">
-	My Schedule
-      </a>
-      <a class="item" href="#contact">
-	Contact
-      </a>
-    </div>
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" href="pictures/C_Hacks.jpg">
+	<link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+	 crossorigin="anonymous"></script>
+	<script src="semantic/dist/semantic.min.js"></script>
+	<title>Henry Doan</title>
+</head>
 
-		<div class="ui grid container">    
-      <!--PROJECT1-->
-			<div class="column row">
-				<div class="ui center aligned sixteen wide column" style="padding-bottom:20px; padding-top:20px;">
-	  		<h2>Mailbox Notifier | Citrus Hack 2015</h2>
-				</div>
-				<div class="six wide column" style="padding-left:30px">
-					<img src="pictures/C_Hacks.jpg" class="ui centered large image">
-				</div>
-				<div class="ten wide column">
-					<div class="ui bulleted list" style="font-size:13pt">
-						<div class="item" style="padding:10px;">
-							Users are able to have packages and mail inserted into their mailbox and are prompted with a notification through a webpage.
-						</div>
-						<div class="item" style="padding:10px;">
-							I was responsible for designing the inital project concept and developing the hardware design.
-						</div>
-						<div class="item" style="padding:10px;">
-							I also assisted my team members in implementing the hardware, developing the nofication webpage and the logging of the notifications.
-						</div>
-						<div class="item" style="padding:10px;">
-							Each log contained a time stamp of when the mail arrived and it was removed.
-						</div>
-						<div class="item" style="padding:10px;">
-							We used an Arduino Uno to tie all of the different components together and I helped with the testing of the Ardiuno code.
-						</div>
+<body style="-webkit-font-smoothing: antialiased !important;">
+
+	<!--HEADER MENU-->
+	<div class="ui fixed inverted menu" style="background-color:#2D2D2D; color:white;">
+		<div class="active item">
+			Henry Doan
+		</div>
+		<a class="item" href="https://hdoan002.github.io/">
+			Home
+		</a>
+		<a class="item" href="#">
+			My Projects
+		</a>
+		<a class="item" href="https://hdoan002.github.io/#schedule">
+			My Schedule
+		</a>
+		<a class="item" href="#contact">
+			Contact
+		</a>
+	</div>
+
+	<div class="ui grid container">
+		<!--PROJECT1-->
+		<div class="column row" id="mailbox">
+			<div class="ui center aligned sixteen wide column" style="padding-bottom:20px; padding-top:20px;">
+				<h2>Mailbox Notifier | Citrus Hack 2015</h2>
+			</div>
+			<div class="six wide column" style="padding-left:30px">
+				<img src="pictures/C_Hacks.jpg" class="ui centered large image">
+			</div>
+			<div class="ten wide column">
+				<div class="ui bulleted list" style="font-size:13pt">
+					<div class="item" style="padding:10px;">
+						Users are able to have packages and mail inserted into their mailbox and are prompted with a notification through a webpage.
+					</div>
+					<div class="item" style="padding:10px;">
+						I was responsible for designing the inital project concept and developing the hardware design.
+					</div>
+					<div class="item" style="padding:10px;">
+						I also assisted my team members in implementing the hardware, developing the nofication webpage and the logging of the notifications.
+					</div>
+					<div class="item" style="padding:10px;">
+						Each log contained a time stamp of when the mail arrived and it was removed.
+					</div>
+					<div class="item" style="padding:10px;">
+						We used an Arduino Uno to tie all of the different components together and I helped with the testing of the Ardiuno code.
 					</div>
 				</div>
 			</div>
+		</div>
 
-      <!--PROJECT2-->
-      <div class="column row">
-	<div class="ui center aligned sixteen wide column" style="padding-bottom:20px; padding-top:20px;">
-	  <h2>Class Insights | SB Hacks 2016</h2>
-	</div>
-	<div class="six wide column" style="padding-left:30px">
-	  <img src="pictures/SB_Hacks_2016.jpg" class="ui centered large image">
-	</div>
-	<div class="ten wide column">
-	  <div class="ui bulleted list" style="font-size:13pt">
-	    <div class="item" style="padding:10px;">
-	      This is a web application that allows users to post in a forum-like environment about their university classes.
-	    </div>
-	    <div class="item" style="padding:10px;">
-	      I designed the database and user interface concept.
-	    </div>
-	    <div class="item" style="padding:10px;">
-	      Both me and one of my other teammates were responsible for handling backend environment.
-	    </div>
-	    <div class="item" style="padding:10px;">
-	      Some of these things consisted of setting up the server and PHP logic.      
-	    </div>
-	    <div class="item" style="padding:10px;">
-	      We implemented our web application using a LAMP stack.
-	    </div>
-	    <div class="item" style="padding:10px;">
-	      I was also responsible for coordinating my team members as well as regulating workflow amongst our different roles.
-	    </div>
-	  </div>
-	</div> 
-      </div>
-      
-      <!--PROJECT3-->
-      <div class="column row">
-	<div class="ui center aligned sixteen wide column" style="padding-bottom:20px; padding-top:20px;">
-	  <h2>RSA | LA Hacks 2016</h2>
-	</div>
-	<div class="six wide column" style="padding-left:30px">
-	  <img src="pictures/RSA_2016.jpg" class="ui centered large image">
-	</div>
-	<div class="ten wide column">
-	  <div class="ui bulleted list" style="font-size:13pt">
-	    <div class="item" style="padding:10px;">
-	      After taking my discrete structure course, I became interested in the RSA algorithm.
-	    </div>
-	    <div class="item" style="padding:10px;">
-	      I attempted to implement my own version of the RSA aglorithm as a hash function.
-	    </div>
-	    <div class="item" style="padding:10px;">
-	      Using the hash function, I attempted to implement a hash table.
-	    </div>
-	    <div class="item" style="padding:10px;">
-	      It was designed to be used for password encryption and decryption on other projects.
-	    </div>
-	    <div class="item" style="padding:10px;">
-	      The final project could not be complete due to the constraints on memory required to correctly run the algorithm at the time.
-	    </div>
-	    <div class="item" style="padding:10px;">
-	      Overall, I enjoyed working this project because it gave me a opportunity to try to utilize some of the materials that I learned in class.
-	    </div>
-	  </div>
-	</div> 
-      </div>
-      
-      <!--PROJECT4-->
-      <div class="column row" style="padding-bottom:60px;">
-	<div class="ui center aligned sixteen wide column" style="padding-bottom:20px; padding-top:20px;">
-	  <h2>Bash Script Collection | Fall 2016</h2>
-	</div>
-	<div class="six wide column" style="padding-left:30px">
-	  <img src="pictures/bash_scripts.jpg" class="ui centered large image">
-	</div>
-	<div class="ten wide column">
-	  <div class="ui bulleted list" style="font-size:13pt">
-	    <div class="item" style="padding:10px;">
-	      This is a collection of shell scripts that I used to help me optimize my coding assignment workflow.
-	    </div>
-	    <div class="item" style="padding:10px;">
-	      Some of the scripts consists of scp scripts, git scripts and file generation scripts.
-	    </div>
-	  </div>
-	</div> 
-      </div>     
-    </div>
+		<!--PROJECT2-->
+		<div class="column row" id="insights">
+			<div class="ui center aligned sixteen wide column" style="padding-bottom:20px; padding-top:20px;">
+				<h2>Class Insights | SB Hacks 2016</h2>
+			</div>
+			<div class="six wide column" style="padding-left:30px">
+				<img src="pictures/SB_Hacks_2016.jpg" class="ui centered large image">
+			</div>
+			<div class="ten wide column">
+				<div class="ui bulleted list" style="font-size:13pt">
+					<div class="item" style="padding:10px;">
+						This is a web application that allows users to post in a forum-like environment about their university classes.
+					</div>
+					<div class="item" style="padding:10px;">
+						I designed the database and user interface concept.
+					</div>
+					<div class="item" style="padding:10px;">
+						Both me and one of my other teammates were responsible for handling backend environment.
+					</div>
+					<div class="item" style="padding:10px;">
+						Some of these things consisted of setting up the server and PHP logic.
+					</div>
+					<div class="item" style="padding:10px;">
+						We implemented our web application using a LAMP stack.
+					</div>
+					<div class="item" style="padding:10px;">
+						I was also responsible for coordinating my team members as well as regulating workflow amongst our different roles.
+					</div>
+				</div>
+			</div>
+		</div>
 
-    <!--FOOTER-->
-    <div class="ui vertical footer segment" style="background-color:#92C14D; color:#FFFFFF; padding-bottom:100px;">
-      <div class="ui center align container">
-	<a id="contact" style="height:40px; margin:-40px; visibility: hidden;"></a>
-	<!--CONTACT ME-->
-	<div class="sixteen wide column" style="padding-bottom:30px;">
-	  <h2 style="text-align:center">Contact me:</h2>
+		<!--PROJECT3-->
+		<div class="column row" id="rsa">
+			<div class="ui center aligned sixteen wide column" style="padding-bottom:20px; padding-top:20px;">
+				<h2>RSA | LA Hacks 2016</h2>
+			</div>
+			<div class="six wide column" style="padding-left:30px">
+				<img src="pictures/RSA_2016.jpg" class="ui centered large image">
+			</div>
+			<div class="ten wide column">
+				<div class="ui bulleted list" style="font-size:13pt">
+					<div class="item" style="padding:10px;">
+						After taking my discrete structure course, I became interested in the RSA algorithm.
+					</div>
+					<div class="item" style="padding:10px;">
+						I attempted to implement my own version of the RSA aglorithm as a hash function.
+					</div>
+					<div class="item" style="padding:10px;">
+						Using the hash function, I attempted to implement a hash table.
+					</div>
+					<div class="item" style="padding:10px;">
+						It was designed to be used for password encryption and decryption on other projects.
+					</div>
+					<div class="item" style="padding:10px;">
+						The final project could not be complete due to the constraints on memory required to correctly run the algorithm at the time.
+					</div>
+					<div class="item" style="padding:10px;">
+						Overall, I enjoyed working this project because it gave me a opportunity to try to utilize some of the materials that I learned
+						in class.
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!--PROJECT4-->
+		<div class="column row" id="bash" style="padding-bottom:60px;">
+			<div class="ui center aligned sixteen wide column" style="padding-bottom:20px; padding-top:20px;">
+				<h2>Bash Script Collection | Fall 2016</h2>
+			</div>
+			<div class="six wide column" style="padding-left:30px">
+				<img src="pictures/bash_scripts.jpg" class="ui centered large image">
+			</div>
+			<div class="ten wide column">
+				<div class="ui bulleted list" style="font-size:13pt">
+					<div class="item" style="padding:10px;">
+						This is a collection of shell scripts that I used to help me optimize my coding assignment workflow.
+					</div>
+					<div class="item" style="padding:10px;">
+						Some of the scripts consists of scp scripts, git scripts and file generation scripts.
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
-	<div class="ui stackable inverted divided grid">
-	  <div class="ui center aligned four wide column" style="padding:20px; font-size:12pt;">
-	    <b>Email: </b> hdoan657@gmail.com
-	    <br>
-	    <b>Phone Number: </b> (669)237-9628
-	  </div>
-	  <div class="ui center aligned three wide column">
-	    <h4 class="ui inverted header">Github</h4>
-	    <a class="ui circular github icon button" href="https://github.com/hdoan002">
-	      <i class="github icon"></i>
-	    </a>
-	  </div>
-	  <div class="ui center aligned three wide column">
-	    <h4 class="ui inverted header">LinkedIn</h4>
-	    <a class="ui circular linkedin icon button" href="https://www.linkedin.com/in/henry-doan-6b523165/">
-	      <i class="linkedin icon"></i>
-	    </a>
-	  </div>
-	  <div class="ui center aligned three wide column">
-	    <h4 class="ui inverted header">Facebook</h4>
-	    <a class="ui circular facebook icon button" href="https://www.facebook.com/henry.doan.12">
-	      <i class="facebook icon"></i>
-	    </a>
-	  </div>
-	  <div class="ui center aligned three wide column">
-	    <h4 class="ui inverted header">Instagram</h4>
-	    <a class="ui circular instagram icon button" href="https://www.instagram.com/harrychoow/">
-	      <i class="instagram icon"></i>
-	    </a>
-	  </div>
+
+	<!--FOOTER-->
+	<div class="ui vertical footer segment" style="background-color:#92C14D; color:#FFFFFF; padding-bottom:100px;">
+		<div class="ui center align container">
+			<a id="contact" style="height:40px; margin:-40px; visibility: hidden;"></a>
+			<!--CONTACT ME-->
+			<div class="sixteen wide column" style="padding-bottom:30px;">
+				<h2 style="text-align:center">Contact me:</h2>
+			</div>
+			<div class="ui stackable inverted divided grid">
+				<div class="ui center aligned four wide column" style="padding:20px; font-size:12pt;">
+					<b>Email: </b> hdoan657@gmail.com
+					<br>
+					<b>Phone Number: </b> (669)237-9628
+				</div>
+				<div class="ui center aligned three wide column">
+					<h4 class="ui inverted header">Github</h4>
+					<a class="ui circular github icon button" href="https://github.com/hdoan002">
+						<i class="github icon"></i>
+					</a>
+				</div>
+				<div class="ui center aligned three wide column">
+					<h4 class="ui inverted header">LinkedIn</h4>
+					<a class="ui circular linkedin icon button" href="https://www.linkedin.com/in/henry-doan-6b523165/">
+						<i class="linkedin icon"></i>
+					</a>
+				</div>
+				<div class="ui center aligned three wide column">
+					<h4 class="ui inverted header">Facebook</h4>
+					<a class="ui circular facebook icon button" href="https://www.facebook.com/henry.doan.12">
+						<i class="facebook icon"></i>
+					</a>
+				</div>
+				<div class="ui center aligned three wide column">
+					<h4 class="ui inverted header">Instagram</h4>
+					<a class="ui circular instagram icon button" href="https://www.instagram.com/harrychoow/">
+						<i class="instagram icon"></i>
+					</a>
+				</div>
+			</div>
+		</div>
 	</div>
-      </div>
-    </div>
-  </body>
+</body>
+
 </html>
