--- a/index.html
+++ b/index.html
@@ -63,22 +63,22 @@
 
 		<div class="eight wide centered column row" style="background-color:grey; color:#FFFFFF;">
 			<img src="pictures/C_Hacks.jpg" alt="Citrus Hacks" class="centered_img">
-			<a class="ui green button" href="https://hdoan002.github.io/projects.html/#mailbox" tabindex="0">Mailbox Notifier</a>
+			<a class="ui green button" href="https://hdoan002.github.io/projects.html#mailbox" tabindex="0">Mailbox Notifier</a>
 		</div>
 
 		<div class="eight wide centered column row" style="background-color:grey; color:#FFFFFF;">
 			<img src="pictures/SB_Hacks_2016.jpg" alt="SB Hacks" class="centered_img">
-			<a class="ui green button" href="https://hdoan002.github.io/projects.html/#insights" tabindex="0">Class Insights</a>
+			<a class="ui green button" href="https://hdoan002.github.io/projects.html#insights" tabindex="0">Class Insights</a>
 		</div>
 
 		<div class="eight wide centered column row" style="background-color:grey; color:#FFFFFF;">
 			<img src="pictures/RSA_2016.jpg" alt="RSA" class="centered_img">
-			<a class="ui green button" href="https://hdoan002.github.io/projects.html/#rsa" tabindex="0">RSA Encryption</a>
+			<a class="ui green button" href="https://hdoan002.github.io/projects.html#rsa" tabindex="0">RSA Encryption</a>
 		</div>
 
 		<div class="eight wide centered column row" style="background-color:grey; color:#FFFFFF;">
 			<img src="pictures/bash_scripts.jpg" alt="Bash Scripts" class="centered_img">
-			<a class="ui green button" href="https://hdoan002.github.io/projects.html/#bash" tabindex="0">Bash Script Collection</a>
+			<a class="ui green button" href="https://hdoan002.github.io/projects.html#bash" tabindex="0">Bash Script Collection</a>
 		</div>
 
 
