adding project pictures

--- a/index.html
+++ b/index.html
@@ -62,6 +62,18 @@
 		</div>
 
 		<div class="eight wide centered column row" style="background-color:grey; color:#FFFFFF;">
+			<img src="pictures/personal.jpg" alt="Citrus Hacks" class="ui centered large image">
+			<br>
+			<a class="ui green button" href="https://hdoan002.github.io/projects.html" tabindex="0">My Personal Site</a>
+		</div>
+
+		<div class="eight wide centered column row" style="background-color:grey; color:#FFFFFF;">
+			<img src="pictures/entokey.jpg" alt="SB Hacks" class="ui centered large image">
+			<br>
+			<a class="ui green button" href="https://hdoan002.github.io/projects.html" tabindex="0">Ento Key</a>
+		</div>
+
+		<div class="eight wide centered column row" style="background-color:grey; color:#FFFFFF;">
 			<img src="pictures/C_Hacks.jpg" alt="Citrus Hacks" class="ui centered large image">
 			<br>
 			<a class="ui green button" href="https://hdoan002.github.io/projects.html#mailbox" tabindex="0">Mailbox Notifier</a>
